--- a/prometheus-agent/prom-agent-config.yaml
+++ b/prometheus-agent/prom-agent-config.yaml
@@ -8,7 +8,7 @@ data:
     global:
       scrape_interval: 15s
       external_labels:
-        cluster: "onprem-lab"
+        cluster: "datacenter"
 
     scrape_configs:
       - job_name: 'node-exporter'
