--- a/prometheus/prometheus-central.yaml
+++ b/prometheus/prometheus-central.yaml
@@ -64,8 +64,6 @@ metadata:
   namespace: prometheus
   labels:
     app: prometheus-central
-  annotations:
-    metallb.universe.tf/address-pool: lmv-pool   # 네가 만든 pool 이름 맞춤
 spec:
   type: LoadBalancer
   selector:
@@ -74,4 +72,18 @@ spec:
     - name: http
       port: 9090
       targetPort: 9090
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-prometheus-central-0
+  namespace: prometheus
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: local-path
+  volumeName: prometheus-pv   
 
