--- a/elastalert/elastalert-config.yaml
+++ b/elastalert/elastalert-config.yaml
@@ -24,7 +24,7 @@ data:
   service_error_rule.yaml: |
     name: Service-Error-Alert
     type: any
-    index: service-logs* # 인덱스 패턴에 와일드카드 추가
+    index: service-topic* # 인덱스 패턴에 와일드카드 추가
     filter:
       - term:
           is_error: true
@@ -35,6 +35,56 @@ data:
       minutes: 10
     alert:
       - post
-    http_post_url: https://8gw8cnfky5.execute-api.ap-northeast-2.amazonaws.com/servicealert
+    http_post_url: https://xr6zkub1ne.execute-api.ap-northeast-2.amazonaws.com/servicealert
+    http_post_headers:
+      Content-Type: "application/json"
+      
+   # 3. 새로운 규칙 파일 (system_auth_fail_rule.yaml) 추가
+  system_auth_fail_rule.yaml: |
+    name: System_auth_fail_Alert
+    # 규칙 타입: 'frequency'는 특정 기간 동안 이벤트 발생 횟수를 감지합니다.
+    type: frequency
+    # 검색할 Elasticsearch 인덱스 패턴을 지정합니다.
+    index: system-auth-topic* 
+    filter:
+      - term:
+          auth_result.keyword: "Failed"
+    # 집계의 기준이 될 필드를 지정합니다. "같은 IP"로 감지하기 위해 'ip' 필드를 사용합니다.
+    query_key: ip
+    # 이벤트 발생 횟수를 체크할 기간을 설정합니다.
+    timeframe:
+      minutes: 5
+    # 알림을 발생시킬 이벤트의 최소 횟수입니다.
+    num_events: 10
+    realert:
+      minutes: 15
+    alert:
+      - post
+    http_post_url: https://xr6zkub1ne.execute-api.ap-northeast-2.amazonaws.com/systemauthalert
+    http_post_headers:
+      Content-Type: "application/json"
+      
+  # 4. 새로운 규칙 파일 (system_kmsg_error_rule.yaml) 추가
+  system_kmsg_error_rule.yaml: |
+    name: System_kmsg_error_Alert
+    # 규칙 타입: 'any'는 필터 조건에 일치하는 로그가 발생할 때마다 즉시 알림을 보냅니다.
+    type: any
+    # 검색할 Elasticsearch 인덱스 패턴을 지정합니다.
+    index: system-kmsg-topic* 
+    filter:
+      - exists:
+          field: priority 
+      - query: 
+          range:
+            priority:
+              gte: 0
+              lte: 3  # lte: Less Than or Equal to
+    timeframe:
+      minutes: 5
+    realert:
+      minutes: 1
+    alert:
+      - post
+    http_post_url: https://xr6zkub1ne.execute-api.ap-northeast-2.amazonaws.com/systemkmsgalert
     http_post_headers:
       Content-Type: "application/json"
